Fix: Enhanced CSS to force black input text

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,10 +130,18 @@ html {
 }
 
 /* Force all input text to black */
-input, textarea, select {
+input, textarea, select, .input, .textarea {
   color: #000000 !important;
+  -webkit-text-fill-color: #000000 !important;
 }
 
-input::placeholder, textarea::placeholder {
-  color: #9ca3af !important;
+input::placeholder, textarea::placeholder, .input::placeholder, .textarea::placeholder {
+  color: #6b7280 !important;
+  -webkit-text-fill-color: #6b7280 !important;
+}
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+  -webkit-text-fill-color: #000000 !important;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  background-color: white !important;
 }
